fixed profile image on mobile

--- a/assets/autoload.less
+++ b/assets/autoload.less
@@ -1781,3 +1781,9 @@ a.activity_feed_content_link_title:hover, #content div.row_title_info h1 a.link:
 .user_rows_mini .user_rows > .friend-info {
     text-align: center;
 }
+
+@media (max-width: 480px) {
+    .profile_image {
+        bottom: 110px !important;
+    }
+}
